Fix spacing around empty alerts container.

--- a/client/css/layout.less
+++ b/client/css/layout.less
@@ -4,6 +4,9 @@ body {
 
 #alerts {
     margin-top: 20px;
+    &:empty {
+        margin-top: 0;
+    }
 }
 
 #footer {
